Проработка сценариев
